--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "gpt-tokens": "^1.0.7",
     "prismjs": "^1.29.0",
     "vite-plugin-top-level-await": "^1.3.1",
     "vite-plugin-wasm": "^3.2.2",
     "vue": "^3.2.47",
-    "vue-prism-editor": "2.0.0-alpha.2"
+    "vue-prism-editor": "2.0.0-alpha.2",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
