--- a/package.json
+++ b/package.json
@@ -10,13 +10,12 @@
   },
   "dependencies": {
     "gpt-tokens": "^1.0.7",
-    "markdown-it": "^13.0.1",
-    "markdown-it-prism": "^2.3.0",
+    "marked": "^5.1.0",
+    "marked-highlight": "^2.0.1",
     "prismjs": "^1.29.0",
     "vite-plugin-top-level-await": "^1.3.1",
     "vite-plugin-wasm": "^3.2.2",
     "vue": "^3.2.47",
-    "vue-markdown-render": "^2.0.1",
     "vue-prism-editor": "2.0.0-alpha.2",
     "vue-router": "4"
   },
